--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: test
+      run: |
+        sudo apt update && sudo apt install -yq vim
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
