--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: test
       run: |
-        sudo apt update && sudo apt install -yq vim
+        apt update && apt install -yq vim
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
