--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: 'Set up skopeo'
+      uses: warjiang/setup-skopeo@v0.1.3
+      with:
+        version: latest
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
