--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,6 +17,11 @@ jobs:
       uses: warjiang/setup-skopeo@v0.1.3
       with:
         version: latest
+    - name: 'Sync images'
+      run: |
+        df -kh
+        skopeo --version
+        skopeo copy docker://quay.io/linux-whitehat/no-diuid:latest oci:/tmp/image:latest
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
