--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,7 @@ jobs:
       run: |
         df -kh
         id
+        env
         skopeo --version
         skopeo copy docker://library/ubuntu:24.04 oci:/tmp/image:latest
     - name: Setup .NET
