--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,8 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run Benchmark
-      run: go test -bench . | tee output.txt
+    - name: Install Sysbench
+      run: |
+        sudo apt-get update && sudo apt-get install -y sysbench
+        sysbench cpu run | tee cpu_benchmark.txt
     - name: 'Set up skopeo'
       uses: warjiang/setup-skopeo@v0.1.3
       with:
