--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,11 +8,40 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-
-    runs-on: self-hosted
-
+  test:
+    runs-on: ubuntu-latest
+    env:
+      ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      REPOSITORY: ${{ secrets.REPOSITORY }}
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: connect
+        run: |
+          mkdir -p $HOME/runner
+          cd $HOME/runner
+          curl -o actions-runner-linux-x64-2.317.0.tar.gz -L https://github.com/actions/runner/releases/download/v2.317.0/actions-runner-linux-x64-2.317.0.tar.gz
+          echo "9e883d210df8c6028aff475475a457d380353f9d01877d51cc01a17b2a91161d  actions-runner-linux-x64-2.317.0.tar.gz" | shasum -a 256 -c
+          tar xzf ./actions-runner-linux-x64-2.317.0.tar.gz
+      - name: run
+        run: |
+          REG_TOKEN=$(curl -X POST -H "Authorization: token ${ACCESS_TOKEN}" -H "Accept: application/vnd.github+json" https://api.github.com/repos/${REPOSITORY}/actions/runners/registration-token | jq .token --raw-output)
+          cd /home/runner/runner
+          
+          ./config.sh --unattended --url https://github.com/${REPOSITORY} --token ${REG_TOKEN}
+          
+          cleanup() {
+            echo "Removing runner..."
+            ./config.sh remove --token ${REG_TOKEN}
+          }
+          
+          trap cleanup EXIT SIGINT SIGTERM
+          
+          ./run.sh
+build:
+  runs-on: self-hosted
+  steps:
     - uses: actions/checkout@v2
     - name: Install Sysbench
       run: |
