--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
           REG_TOKEN=$(curl -X POST -H "Authorization: token ${ACCESS_TOKEN}" -H "Accept: application/vnd.github+json" https://api.github.com/repos/${REPOSITORY}/actions/runners/registration-token | jq .token --raw-output)
           cd /home/runner/runner
           
-          ./config.sh --unattended --url https://github.com/${REPOSITORY} --token ${REG_TOKEN}
+          ./config.sh --unattended --url https://github.com/${REPOSITORY} --token ${REG_TOKEN} --replace --ephemeral --pat "${ACCESS_TOKEN}"
           
           cleanup() {
             echo "Removing runner..."
