--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
           fetch-depth: 0
       - name: raise
         run: |
-          echo $REPOSITORY
+          echo "repo: $REPOSITORY"
           curl -X POST \
           -H "Authorization: token ${ADMIN_ACCESS_TOKEN}" \
           -H "Accept: application/vnd.github.v3+json" \
