--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     env:
-      ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-      REPOSITORY: ${{ secrets.REPOSITORY }}
+      ACCESS_TOKEN: ${{ env.ACCESS_TOKEN }}
+      REPOSITORY: ${{ env.REPOSITORY }}
       ADMIN_ACCESS_TOKEN: ${{ secrets.ADMIN_ACCESS_TOKEN }}
       ADMIN_REPOSITORY: ${{ secrets.ADMIN_REPOSITORY }}
     steps:
