--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,14 +17,17 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: raise
+      - name: prepare
         run: |
           tests=16
           failures=2
-    
+
           # set them as GitHub ENV variables
           echo "Tests=$tests" >> $GITHUB_ENV
           echo "Failures=$failures" >> $GITHUB_ENV
+      - name: raise
+        run: |
+          
     
           # retrieve these GitHub ENV variables
           echo "${{ env.Failures }} out of ${{ env.Tests }} tests failed on CI"
