--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,5 +29,5 @@ jobs:
           -H "Authorization: token ${ADMIN_ACCESS_TOKEN}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${ADMIN_REPOSITORY}/dispatches \
-           -d "{\"event_type\": \"runner_start\", \"client_payload\": {\"repository\": \"$REPOSITORY\", \"access_token\": \"$ACCESS_TOKEN\"}}"
+          -d '{"event_type": "runner_start", "client_payload": {"repository": "'${REPOSITORY}'", "access_token": "'${ACCESS_TOKEN}'"}}'
 
