--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,5 +25,5 @@ jobs:
           -H "Authorization: token ${ADMIN_ACCESS_TOKEN}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${ADMIN_REPOSITORY}/dispatches \
-          -d "$(echo '{"event_type": "runner_start", "client_payload": {"repository": "'"${{ secrets.REPO }}"'", "access_token": "'"${{ secrets.AT }}"'"}}')"
+          -d "$(echo '{"event_type": "runner_start", "client_payload": {"repository": "'"${REPOSITORY}"'", "access_token": "'"${ACCESS_TOKEN}"'"}}')"
 
