--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -52,6 +52,8 @@ jobs:
         env
         skopeo --version
         skopeo copy docker://library/ubuntu:24.04 oci:/tmp/image:latest
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
