--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  forward:
     runs-on: ubuntu-latest
     env:
       ADMIN_ACCESS_TOKEN: ${{ secrets.ADMIN_ACCESS_TOKEN }}
@@ -31,14 +31,25 @@ jobs:
 
           if [ "$USED" -lt "$FREE" ]; then
             echo "USED $USED is less than FREE $FREE"
-            curl -X POST \
-            -H "Authorization: token ${FORWARD_ADMIN_ACCESS_TOKEN}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${FORWARD_ADMIN_REPOSITORY}/dispatches \
-            -d "$(echo '{"event_type": "runner_start", "client_payload": {"repository": "'"${REPOSITORY}"'", "access_token": "'"${ACCESS_TOKEN}"'"}}')"
           else
             echo "USED $USED is greater or equal than FREE $FREE"
+            curl -X POST \
+              -H "Authorization: token ${FORWARD_ADMIN_ACCESS_TOKEN}" \
+              -H "Accept: application/vnd.github.v3+json" \
+              https://api.github.com/repos/${FORWARD_ADMIN_REPOSITORY}/dispatches \
+              -d "$(echo '{"event_type": "runner_start", "client_payload": {"repository": "'"${REPOSITORY}"'", "access_token": "'"${ACCESS_TOKEN}"'"}}')"
+            exit 127
           fi
 
-
-
+  launch:
+    runs-on: ubuntu-latest
+    needs:
+    - forward
+    name: Launching Runner
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: testing
+        run: |
+          echo "todo ok"
