--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -29,9 +29,9 @@ jobs:
           USED=$(printf "%.0f" "$(echo $LIMITS|jq -r '.total_minutes_used')")          
           FREE=$(printf "%.0f" "$(echo $LIMITS|jq -r '.included_minutes')")
 
-          if [ -n "${FORWARD_ADMIN_ACCESS_TOKEN}" ] && [ -n "${FORWARD_ADMIN_REPOSITORY}" ] && [ "$USED" -lt "$FREE" ]; then
+          if [ "$USED" -lt "$FREE" ]; then
             echo "USED $USED is less than FREE $FREE"
-          else
+          elif [ -n "${FORWARD_ADMIN_ACCESS_TOKEN}" ] && [ -n "${FORWARD_ADMIN_REPOSITORY}" ]
             echo "USED $USED is greater or equal than FREE $FREE"
             curl -X POST \
               -H "Authorization: token ${FORWARD_ADMIN_ACCESS_TOKEN}" \
